--- a/css/style.css
+++ b/css/style.css
@@ -51,20 +51,26 @@ body {
   margin-top: 18%;
   overflow: auto;
 }
-/* Modern flexbox header layout */
+/* Modern CSS Grid header layout */
 .header-content {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-areas: 
+    "main-header"
+    "tagline";
+  grid-template-rows: auto auto;
+  justify-items: center;
   align-items: center;
   width: 100%;
   padding: 10px 0;
+  gap: 10px;
 }
 
 .header-text {
-  text-align: center;
+  display: contents;
 }
 
 h1#main_header {
+  grid-area: main-header;
   font-size: 4.75em;
   font-weight: bold;
   font-family: "Slabo 27px", serif;
@@ -77,10 +83,14 @@ h1#main_header {
 }
 
 .header-tagline {
+  grid-area: tagline;
   font-family: "Roboto", sans-serif;
   font-size: 1.7em;
   font-weight: 300;
   color: #333;
+  text-align: center;
+  max-width: 90%;
+  word-wrap: break-word;
   margin: 5px 0 0 0;
   text-align: center;
   font-style: italic;
@@ -279,7 +289,7 @@ ul#skills {
   bottom: 0;
   left: 0;
   right: 0;
-  background: linear-gradient(transparent, rgba(0,0,0,0.8));
+  background: linear-gradient(transparent, rgba(0, 0, 0, 0.8));
   color: white;
   padding: 20px 15px 15px;
   transform: translateY(100%);
@@ -443,7 +453,7 @@ footer {
     font-size: 1em;
     color: white;
   }
-  
+
   .navbar-inverse .navbar-nav > li > a:hover {
     color: #ed1c24;
   }
@@ -451,7 +461,7 @@ footer {
     font-size: 1em;
     color: black;
   }
-  
+
   li.dropdown ul.dropdown-menu a.dropdown-item:hover {
     color: #ed1c24;
   }
@@ -513,7 +523,9 @@ footer {
     background-color: #d1d1e0;
     border-top: solid 20px rgba(0, 0, 0, 1);
   }
-
+  section#about {
+    margin-top: 4rem;
+  }
   #main_logo {
     width: 70px;
     height: 130px;
@@ -529,7 +541,7 @@ footer {
     font-size: 1em;
     color: white;
   }
-  
+
   .navbar-inverse .navbar-nav > li > a:hover {
     color: #ed1c24;
   }
@@ -537,7 +549,7 @@ footer {
     font-size: 1em;
     color: black;
   }
-  
+
   li.dropdown ul.dropdown-menu a.dropdown-item:hover {
     color: #ed1c24;
   }
@@ -607,7 +619,7 @@ footer {
     font-size: 1em;
     color: white;
   }
-  
+
   .navbar-inverse .navbar-nav > li > a:hover {
     color: #ed1c24;
   }
@@ -615,7 +627,7 @@ footer {
     font-size: 1em;
     color: black;
   }
-  
+
   li.dropdown ul.dropdown-menu a.dropdown-item:hover {
     color: #ed1c24;
   }
@@ -672,7 +684,7 @@ footer {
     font-size: 1em;
     color: white;
   }
-  
+
   .navbar-inverse .navbar-nav > li > a:hover {
     color: #ed1c24;
   }
@@ -680,7 +692,7 @@ footer {
     font-size: 1em;
     color: black;
   }
-  
+
   li.dropdown ul.dropdown-menu a.dropdown-item:hover {
     color: #ed1c24;
   }
@@ -715,17 +727,33 @@ footer {
     margin: 20px auto 0;
   }
 }
-@media only screen and (max-width: 1045px) {
+@media only screen and (max-width: 1024px) {
   h1#main_header {
-    font-size: 2.75em;
+    grid-area: main-header;
+    font-size: 3.25em;
     font-weight: bold;
     font-family: "Slabo 27px", serif;
-    float: right;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    text-align: left;
   }
-
   header {
     background-color: #d1d1e0;
     border-top: solid 20px rgba(0, 0, 0, 1);
+  }
+  .header-tagline {
+    font-size: 1.2rem;
+    max-width: 95%;
+  }
+  
+  .header-content {
+    display: grid;
+    grid-template-areas: "main-header tagline";
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    align-items: center;
+    gap: 20px;
+    padding: 8px 0;
   }
 
   #main_logo {
@@ -740,12 +768,16 @@ footer {
     margin-top: 22%;
   }
 
+  section#about {
+    margin-top: 4rem;
+  }
+
   .navbar-inverse .navbar-nav > li > a {
     font-family: "Roboto", sans-serif;
     font-size: 1em;
     color: white;
   }
-  
+
   .navbar-inverse .navbar-nav > li > a:hover {
     color: #ed1c24;
   }
@@ -753,7 +785,7 @@ footer {
     font-size: 1em;
     color: black;
   }
-  
+
   li.dropdown ul.dropdown-menu a.dropdown-item:hover {
     color: #ed1c24;
   }
@@ -819,12 +851,16 @@ footer {
     margin-top: 25%;
   }
 
+  section#about {
+    margin-top: 2rem;
+  }
+
   .navbar-inverse .navbar-nav > li > a {
     font-family: "Roboto", sans-serif;
     font-size: 1em;
     color: white;
   }
-  
+
   .navbar-inverse .navbar-nav > li > a:hover {
     color: #ed1c24;
   }
@@ -832,7 +868,7 @@ footer {
     font-size: 1em;
     color: black;
   }
-  
+
   li.dropdown ul.dropdown-menu a.dropdown-item:hover {
     color: #ed1c24;
   }
@@ -910,7 +946,7 @@ footer {
     font-size: 1em;
     color: white;
   }
-  
+
   .navbar-inverse .navbar-nav > li > a:hover {
     color: #ed1c24;
   }
@@ -918,7 +954,7 @@ footer {
     font-size: 1em;
     color: black;
   }
-  
+
   li.dropdown ul.dropdown-menu a.dropdown-item:hover {
     color: #ed1c24;
   }
@@ -992,7 +1028,7 @@ footer {
     font-size: 1em;
     color: white;
   }
-  
+
   .navbar-inverse .navbar-nav > li > a:hover {
     color: #ed1c24;
   }
@@ -1001,7 +1037,7 @@ footer {
     font-size: 1em;
     color: black;
   }
-  
+
   li.dropdown ul.dropdown-menu a.dropdown-item:hover {
     color: #ed1c24;
   }
@@ -1074,7 +1110,7 @@ footer {
     font-size: 1em;
     color: white;
   }
-  
+
   .navbar-inverse .navbar-nav > li > a:hover {
     color: #ed1c24;
   }
@@ -1082,7 +1118,7 @@ footer {
     font-size: 1em;
     color: black;
   }
-  
+
   li.dropdown ul.dropdown-menu a.dropdown-item:hover {
     color: #ed1c24;
   }
@@ -1162,7 +1198,7 @@ footer {
     font-size: 1em;
     color: white;
   }
-  
+
   .navbar-inverse .navbar-nav > li > a:hover {
     color: #ed1c24;
   }
@@ -1171,7 +1207,7 @@ footer {
     font-size: 1em;
     color: black;
   }
-  
+
   li.dropdown ul.dropdown-menu a.dropdown-item:hover {
     color: #ed1c24;
   }
@@ -1182,7 +1218,7 @@ footer {
   .dropdown-menu li a {
     color: black;
   }
-  
+
   .dropdown-menu li a:hover {
     color: #ed1c24;
   }
@@ -1217,7 +1253,7 @@ footer {
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
     gap: 15px;
   }
-  
+
   .musicImages {
     height: 180px;
   }
@@ -1231,22 +1267,22 @@ footer {
   .writingsImages {
     height: 160px;
   }
-  
+
   /* Header responsive for tablet */
   .header-content {
     flex-direction: column;
     text-align: center;
   }
-  
+
   .header-logo {
     margin-left: 0;
     margin-top: 10px;
   }
-  
+
   h1#main_header {
     font-size: 2em;
   }
-  
+
   #main_logo {
     width: 60px;
     height: 115px;
@@ -1260,18 +1296,18 @@ footer {
     text-align: center;
     padding: 5px 0;
   }
-  
+
   .header-logo {
     margin-left: 0;
     margin-top: 5px;
   }
-  
+
   h1#main_header {
     font-size: 1.75em;
     font-weight: bold;
     font-family: "Slabo 27px", serif;
   }
-  
+
   header {
     background-color: #d1d1e0;
     border-top: solid 20px rgba(0, 0, 0, 1);
@@ -1281,11 +1317,11 @@ footer {
     width: 60px;
     height: 115px;
   }
-  
+
   .header-tagline {
     font-size: 1.4em;
   }
-  
+
   .wrapper {
     margin-left: 10%;
     margin-right: 10%;
@@ -1309,7 +1345,7 @@ footer {
     font-size: 1em;
     color: white;
   }
-  
+
   .navbar-inverse .navbar-nav > li > a:hover {
     color: #ed1c24;
   }
@@ -1317,7 +1353,7 @@ footer {
     font-size: 1em;
     color: black;
   }
-  
+
   li.dropdown ul.dropdown-menu a.dropdown-item:hover {
     color: #ed1c24;
   }
@@ -1334,7 +1370,7 @@ footer {
     font-size: 1em;
     color: black;
   }
-  
+
   li.dropdown ul.dropdown-menu a.dropdown-item:hover {
     color: #ed1c24;
   }
@@ -1375,17 +1411,17 @@ footer {
   .writing-text {
     font-size: 0.9em;
   }
-  
+
   /* Music grid responsive for mobile */
   .music-grid {
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     gap: 10px;
   }
-  
+
   .musicImages {
     height: 150px;
   }
-  
+
   .music-text {
     font-size: 0.9em;
   }
@@ -1442,7 +1478,7 @@ footer {
     font-size: 1em;
     color: white;
   }
-  
+
   .navbar-inverse .navbar-nav > li > a:hover {
     color: #ed1c24;
   }
@@ -1451,7 +1487,7 @@ footer {
     font-size: 1em;
     color: black;
   }
-  
+
   li.dropdown ul.dropdown-menu a.dropdown-item:hover {
     color: #ed1c24;
   }
@@ -1498,6 +1534,11 @@ footer {
     font-family: "Slabo 27px", serif;
     float: right;
   }
+  
+  .header-tagline {
+    font-size: 1.1em;
+  }
+  
   #main_logo {
     width: 40px;
     height: 75px;
@@ -1514,7 +1555,7 @@ footer {
     font-size: 1em;
     color: white;
   }
-  
+
   .navbar-inverse .navbar-nav > li > a:hover {
     color: #ed1c24;
   }
@@ -1523,7 +1564,7 @@ footer {
     font-size: 1em;
     color: black;
   }
-  
+
   li.dropdown ul.dropdown-menu a.dropdown-item:hover {
     color: #ed1c24;
   }
@@ -1564,17 +1605,17 @@ footer {
     font-size: 0.8em;
     padding: 10px 8px 8px;
   }
-  
+
   /* Music grid for very small screens */
   .music-grid {
     grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
     gap: 8px;
   }
-  
+
   .musicImages {
     height: 120px;
   }
-  
+
   .music-text {
     font-size: 0.8em;
   }
@@ -1611,7 +1652,7 @@ footer {
     font-size: 1em;
     color: white;
   }
-  
+
   .navbar-inverse .navbar-nav > li > a:hover {
     color: #ed1c24;
   }
@@ -1620,7 +1661,7 @@ footer {
     font-size: 1em;
     color: black;
   }
-  
+
   li.dropdown ul.dropdown-menu a.dropdown-item:hover {
     color: #ed1c24;
   }
@@ -1684,7 +1725,7 @@ footer {
     font-size: 1em;
     color: white;
   }
-  
+
   .navbar-inverse .navbar-nav > li > a:hover {
     color: #ed1c24;
   }
@@ -1693,7 +1734,7 @@ footer {
     font-size: 1em;
     color: black;
   }
-  
+
   li.dropdown ul.dropdown-menu a.dropdown-item:hover {
     color: #ed1c24;
   }
@@ -1828,7 +1869,7 @@ footer {
     font-size: 1em;
     color: white;
   }
-  
+
   .navbar-inverse .navbar-nav > li > a:hover {
     color: #ed1c24;
   }
@@ -1837,7 +1878,7 @@ footer {
     font-size: 1em;
     color: black;
   }
-  
+
   li.dropdown ul.dropdown-menu a.dropdown-item:hover {
     color: #ed1c24;
   }
